Hovering over a post no longer shifts other posts

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -162,6 +162,7 @@ header h1 a{
 }
 
 .post:hover{
+  margin: 47px;
   cursor: pointer;
   border: 5px solid orange;
 }
